--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -18,7 +18,11 @@
     "graphql-codegen": "graphql-codegen",
     "vite": "vite",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:migrate:sqlite": "prisma migrate dev --schema prisma/schema.sqlite.prisma",
+    "prisma:db-push:sqlite": "prisma db push --schema prisma/schema.sqlite.prisma",
+    "prisma:seed": "prisma db seed",
+    "prisma:studio": "prisma studio --schema prisma/schema.sqlite.prisma"
   },
   "type": "module",
   "engines": {
@@ -32,12 +36,15 @@
     "@remix-run/node": "^2.16.1",
     "@remix-run/react": "^2.16.1",
     "@remix-run/serve": "^2.16.1",
+    "bullmq": "^5.7.15",
     "@shopify/app-bridge-react": "^4.1.6",
     "@shopify/polaris": "^12.0.0",
+    "@shopify/polaris-viz": "^16.16.0",
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
     "isbot": "^5.1.0",
     "p-limit": "^7.1.1",
+    "ioredis": "^5.4.1",
     "prisma": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
