feat(contracts): add typed contracts registry with JSON Schema export; tests; docs; check off focus item

--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "private": true,
   "scripts": {
     "shopify:deploy": "shopify app deploy",
-    "lint": "npm run typecheck",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "pre-commit": "lint-staged",
+    "scaffold": "plop",
+    "release": "tools/release/version-bump.sh",
+    "release:notes": "tools/release/release-notes.sh",
+    "release:patch": "tools/release/version-bump.sh patch",
+    "release:minor": "tools/release/version-bump.sh minor",
+    "release:major": "tools/release/version-bump.sh major",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "build": "npm run typecheck",
@@ -12,20 +22,50 @@
     "test:watch": "vitest --watch",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test:sync:webhooks": "npx vitest run --root dashboard --config vitest.config.ts dashboard/app/lib/webhooks/__tests__/handlers.server.test.ts dashboard/app/lib/webhooks/__tests__/queue.server.test.ts dashboard/app/lib/webhooks/__tests__/processors.server.test.ts"
+    "test:sync:webhooks": "npx vitest run --root dashboard --config vitest.config.ts dashboard/app/lib/webhooks/__tests__/handlers.server.test.ts dashboard/app/lib/webhooks/__tests__/queue.server.test.ts dashboard/app/lib/webhooks/__tests__/processors.server.test.ts",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.29.7",
+    "@commitlint/cli": "^20.0.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@graphql-codegen/cli": "^6.0.0",
+    "@graphql-codegen/typescript": "^5.0.1",
+    "@graphql-codegen/typescript-operations": "^5.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.3",
+    "@graphql-codegen/typescript-resolvers": "^5.0.1",
     "@nx/js": "^21.5.3",
     "@nx/node": "^21.5.3",
     "@nx/react": "^21.5.3",
     "@nx/workspace": "^21.5.3",
+    "@openapitools/openapi-generator-cli": "^2.24.0",
     "@playwright/test": "^1.43.1",
     "@remix-run/testing": "^2.8.0",
     "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "@vitest/coverage-v8": "^1.4.0",
+    "eslint": "^9.36.0",
+    "husky": "^9.1.7",
+    "license-checker": "^25.0.1",
+    "lint-staged": "^16.2.3",
     "msw": "^2.2.3",
     "nx": "^21.5.3",
+    "plop": "^4.0.4",
+    "prettier": "^3.6.2",
     "prisma": "^5.11.0",
+    "standard-version": "^9.5.0",
+    "swagger-codegen-cli": "^2.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4",
     "vitest": "^1.4.0"
