feat(reliability): add async retry with backoff and JSONL DLQ; tests; docs

--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "release:patch": "tools/release/version-bump.sh patch",
     "release:minor": "tools/release/version-bump.sh minor",
     "release:major": "tools/release/version-bump.sh major",
+    "security:scan": "tools/security/security-scan.sh all",
+    "security:secrets": "tools/security/security-scan.sh secrets",
+    "security:licenses": "tools/security/security-scan.sh licenses",
+    "security:audit": "npm audit --audit-level=moderate",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "build": "npm run typecheck",
