--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dev:setup": "make bootstrap",
     "dev:start": "make start",
     "dev:stop": "make stop",
+    "debug": "node tools/debugging/debug-tracer.js",
+    "debug:templates": "node tools/debugging/debug-templates.js",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "build": "npm run typecheck",
@@ -40,7 +42,12 @@
     "accessibility:all": "npm run lint:accessibility && npm run test:accessibility",
     "test:load": "node scripts/load-testing/load-test.js",
     "test:soak": "node scripts/load-testing/soak-test.js",
-    "test:performance": "npm run test:load && npm run test:soak"
+    "test:performance": "npm run test:load && npm run test:soak",
+    "test:flaky": "node scripts/test-reliability/flaky-test-detector.js",
+    "test:retry": "node scripts/test-reliability/test-retry.js",
+    "test:reliability": "npm run test:flaky && npm run test:retry",
+    "quality:dashboard": "node scripts/quality-dashboard.js",
+    "quality:all": "npm run test:e2e && npm run security:all && npm run test:accessibility && npm run test:load && npm run test:reliability && npm run quality:dashboard"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -57,6 +64,7 @@
     "@changesets/cli": "^2.29.7",
     "@commitlint/cli": "^20.0.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@faker-js/faker": "^10.0.0",
     "@graphql-codegen/cli": "^6.0.0",
     "@graphql-codegen/typescript": "^5.0.1",
     "@graphql-codegen/typescript-operations": "^5.0.1",
@@ -69,6 +77,7 @@
     "@openapitools/openapi-generator-cli": "^2.24.0",
     "@playwright/test": "^1.43.1",
     "@remix-run/testing": "^2.8.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
