feat(tooling): add production optimization and monitoring tools
✅ PRODUCTION OPTIMIZATION COMPLETE

Added comprehensive production optimization infrastructure:

1. Performance Monitor (performance-monitor.js)
   - Real-time performance tracking
   - Memory, CPU, and response time monitoring
   - Automated threshold alerts
   - Performance reporting and export

2. Error Tracker (error-tracker.js)
   - Comprehensive error tracking and alerting
   - Error rate monitoring and threshold detection
   - Alert channels (log, file, webhook, email)
   - Error statistics and reporting

3. System Monitor (system-monitor.js)
   - System resource monitoring
   - Service health checks (TCP/HTTP)
   - Resource threshold monitoring
   - System health reporting

4. Production Optimizer (production-optimizer.sh)
   - Complete production environment setup
   - System requirements checking
   - Monitoring service management
   - Production configuration and optimization
   - Automated reporting and status checking

Features:
- Real-time monitoring with configurable intervals
- Automated alerting with severity levels
- Comprehensive logging and reporting
- Production environment optimization
- Service health checking
- Resource threshold monitoring
- Log rotation configuration
- Performance metrics collection

NPM Scripts Added:
- prod:optimize - Complete production setup
- prod:start - Start monitoring services
- prod:stop - Stop monitoring services
- prod:status - Show production status
- prod:monitor - Run performance monitor
- prod:errors - Run error tracker
- prod:system - Run system monitor

ESLint Configuration:
- Updated to properly handle Node.js globals
- Separate rules for TypeScript and JavaScript files
- Allow console statements in production monitoring tools

Ready for production deployment with comprehensive monitoring!

--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "dev:stop": "make stop",
     "debug": "node tools/debugging/debug-tracer.js",
     "debug:templates": "node tools/debugging/debug-templates.js",
+    "prod:optimize": "tools/production-optimization/production-optimizer.sh setup",
+    "prod:start": "tools/production-optimization/production-optimizer.sh start",
+    "prod:stop": "tools/production-optimization/production-optimizer.sh stop",
+    "prod:status": "tools/production-optimization/production-optimizer.sh status",
+    "prod:monitor": "node tools/production-optimization/performance-monitor.js",
+    "prod:errors": "node tools/production-optimization/error-tracker.js",
+    "prod:system": "node tools/production-optimization/system-monitor.js",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "build": "npm run typecheck",
@@ -85,6 +92,7 @@
     "axe-core": "^4.10.3",
     "eslint": "^9.36.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
     "license-checker": "^25.0.1",
     "lint-staged": "^16.2.3",
