--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,11 @@ ZOHO_CLIENT_ID=
 ZOHO_CLIENT_SECRET=
 ZOHO_REFRESH_TOKEN=
 ZOHO_ORG_ID=
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@db:5432/app
 POSTGRES_URL=postgresql+psycopg2://postgres:postgres@db:5432/app
 REDIS_URL=redis://redis:6379/0
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/1
 CHROMA_PATH=/data/chroma
 PERSIST_DIR=/data/storage
 INDEX_ID=hotrodan
@@ -15,3 +18,6 @@ COLLECTION=hotrodan_docs
 SHOPIFY_BOT_SIGNATURE_INPUT=
 SHOPIFY_BOT_SIGNATURE=
 SHOPIFY_BOT_SIGNATURE_AGENT=https://shopify.com
+SHOPIFY_WEBHOOK_SECRET=
+BLOB_ROOT=./blob_store
+SYNC_USE_CELERY=1
