chore(feature/database): save worktree state before removal

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,15 @@ ZOHO_CLIENT_ID=
 ZOHO_CLIENT_SECRET=
 ZOHO_REFRESH_TOKEN=
 ZOHO_ORG_ID=
+DATABASE_URL=
+SHADOW_DATABASE_URL=
+DATABASE_URL_RO=
+DASHBOARD_API_URL=http://localhost:3000
+DEFAULT_ACCOUNT_ID=seed-hotrodan
+ZOHO_CHANNEL_EXTERNAL_ID=zoho-mailbox-hotrodan
+ZOHO_CHANNEL_TYPE=email
+SHOPIFY_CHANNEL_EXTERNAL_ID=shopify-support-hotrodan
+SHOPIFY_CHANNEL_TYPE=shopify
 POSTGRES_URL=postgresql+psycopg2://postgres:postgres@db:5432/app
 REDIS_URL=redis://redis:6379/0
 CHROMA_PATH=/data/chroma
