--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,37 +5,66 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: app
-    volumes: [ "pgdata:/var/lib/postgresql/data" ]
-    ports: [ "5432:5432" ]
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
   redis:
     image: redis:7
-    ports: [ "6379:6379" ]
+    ports:
+      - "6379:6379"
 
   rag-api:
     build: ./app/rag_api
     env_file: .env
-    volumes: [ "./data:/data", "./:/workspace" ]
-    ports: [ "8001:8001" ]
-    depends_on: [ db, redis ]
+    volumes:
+      - ./data:/data
+      - ./:/workspace
+    ports:
+      - "8001:8001"
+    depends_on:
+      - db
+      - redis
 
   assistants:
     build: ./app/assistants
     env_file: .env
-    volumes: [ "./:/workspace" ]
-    ports: [ "8002:8002" ]
-    depends_on: [ db, redis, rag-api ]
+    volumes:
+      - ./:/workspace
+    ports:
+      - "8002:8002"
+    depends_on:
+      - db
+      - redis
+      - rag-api
 
   sync:
     build: ./app/sync
     env_file: .env
-    volumes: [ "./:/workspace" ]
-    depends_on: [ db, redis ]
+    volumes:
+      - ./:/workspace
+    depends_on:
+      - db
+      - redis
 
   approval-app:
     build: ./app/approval-app
     env_file: .env
-    ports: [ "5173:5173" ]
-    depends_on: [ assistants ]
+    ports:
+      - "5173:5173"
+    depends_on:
+      - assistants
+
+  connectors:
+    build: ./app/connectors
+    env_file: .env
+    ports:
+      - "8003:8003"
+    depends_on:
+      - db
+      - redis
+    command: python3 -m uvicorn connectors.main:app --host 0.0.0.0 --port 8003
+
 volumes:
   pgdata:
