--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,3 +1,24 @@
+# syntax=docker/dockerfile:1
+FROM node:20-alpine AS deps
+WORKDIR /app
+COPY package.json package-lock.json* .npmrc* ./
+RUN npm ci --include=dev || npm ci
+
+FROM deps AS build
+WORKDIR /app
+COPY . .
+RUN npm run prisma:generate || true
+RUN npm run build
+
+FROM node:20-alpine AS runtime
+ENV NODE_ENV=production
+WORKDIR /app
+COPY --from=build /app/build ./build
+COPY --from=build /app/package.json ./package.json
+COPY --from=build /app/node_modules ./node_modules
+EXPOSE 3000
+CMD ["node", "./build/server/index.js"]
+
 # syntax=docker/dockerfile:1.6
 ARG NODE_VERSION=20
 FROM node:${NODE_VERSION}-bullseye AS base
