manager: enforce Continuous Work Protocol — proof-of-work every 5m, fallback on block; update GO-SIGNAL and agent instructions

--- a/app/rag_api/requirements.txt
+++ b/app/rag_api/requirements.txt
@@ -11,3 +11,6 @@ llama-index-embeddings-fastembed
 fastembed
 prometheus-client
 redis
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
