observability: enable optional OpenTelemetry tracing for FastAPI services (assistants/sync/connectors)

--- a/app/assistants/requirements.txt
+++ b/app/assistants/requirements.txt
@@ -8,3 +8,6 @@ sqlalchemy[asyncio]
 asyncpg
 pytest
 prometheus-client
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
