--- a/app/sync/requirements.txt
+++ b/app/sync/requirements.txt
@@ -6,3 +6,6 @@ sqlalchemy[asyncio]
 asyncpg
 aiosqlite>=0.19.0
 prometheus-client
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
