--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
   rag-api:
     build: ./app/rag_api
     env_file: .env
+    environment:
+      - UVICORN_WORKERS=2
     volumes:
       - ./data:/data
       - ./:/workspace
