chore(repo): checkpoint code/config changes before production push (excludes assistants.db)

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -19,7 +19,7 @@ redirect_urls = [ ]
 
 [build]
 automatically_update_urls_on_dev = true
-dev_store_url = "your-dev-store.myshopify.com"
+dev_store_url = "hotroddash.myshopify.com"
 
 [[web]]
 name = "Remix Dashboard"
