dashboard.settings: add Prisma env example; fix MCP telemetry imports; run prisma generate + targeted tests (mock)\n\n- Added dashboard/.env.example with DATABASE_URL, DIRECT_URL, SHADOW_DATABASE_URL (no secrets)\n- Fixed telemetry.server imports (publishInboxActionEvent, TelemetryHooks, McpTelemetryEvent) to unblock MCP tests\n- Prisma client generated successfully; MCP/Settings/Inventory/Sales targeted tests passed\n\nRPG: dashboard.settings

--- a/dashboard/.gitignore
+++ b/dashboard/.gitignore
@@ -12,6 +12,8 @@ node_modules
 database.sqlite
 
 .env
+# Allow committed example env files while ignoring other env variants
+!.env.example
 .env.*
 
 package-lock.json
